# recipe-app

./: .gitignore  LICENSE  README.md  recipe-app.code-workspace
python-backend/: .gitignore  Dockerfile  README.md  app.py  langgraph.json  pyproject.toml  test.ipynb  utils.py
python-backend/src/: api.py  graph.py
python-backend/src/schemas/: recipe.py  state.py
python-backend/src/tools/: recipe_tool.py  time_parsing_tool.py
python-backend/src/utils/: cleanup.py  db_utils.py  document_loader.py  logger.py  mock.py  text_utils.py
python-backend/tests/: test_api.py
python-backend/tools/: recipe_tool.py
python-backend/utils/: document_loader.py
recipe-view/RecipeTimerWidget/: AppIntent.swift  RecipeTimerWidgetBundle.swift  RecipeTimerWidgetLiveActivity.swift
recipe-view/RecipeWidgetExtension/: AppIntent.swift  RecipeTimerLiveActivity.swift  RecipeWidgetExtension.swift  RecipeWidgetExtensionBundle.swift  RecipeWidgetExtensionControl.swift  RecipeWidgetExtensionLiveActivity.swift
recipe-view/Shared/: RecipeTimerAttributes.swift
recipe-view/recipe-view/: ColorScheme.swift  ContentView.swift  RecipeViewModel.swift  recipe_viewApp.swift
recipe-view/recipe-view.xcodeproj/: project.pbxproj
recipe-view/recipe-view/Extensions/: UIColor+Extensions.swift
recipe-view/recipe-view/Models/: MockRecipe.swift  Recipe.swift
recipe-view/recipe-view/Utilities/: AppColors.swift
recipe-view/recipe-view/Views/: IngredientsGrid.swift  (+10 more)
recipe-view/recipeTimerWidgetBundle/: recipeTimerWidgetBundleBundle.swift
src/: app.py
src/tools/: recipe_tool.py
src/utils/: text_utils.py
(+4 files in other folders)
