[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "clean-text>=0.6.0",
    "langchain-community>=0.3.14",
    "langchain-google-genai>=2.0.7",
    "langchain-openai>=0.2.14",
    "langchain>=0.3.14",
    "langgraph-cli[inmem]>=0.1.65",
    "langgraph>=0.2.60",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "ruff>=0.8.5",
]
