[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recipe_app"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "Recipe App Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "clean-text>=0.6.0",
    "fastapi[standard]>=0.115.6",
    "langchain-community>=0.3.14",
    "langchain-google-genai>=2.0.7",
    "langchain-openai>=0.2.14",
    "langchain>=0.3.14",
    "langgraph-cli[inmem]>=0.1.65",
    "langgraph>=0.2.60",
    "pytest-asyncio>=0.25.1",
    "pytest>=8.3.4",
    "supabase>=2.11.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "ruff>=0.8.5",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
asyncio_mode = "auto"


[tool.hatch.build.targets.wheel]
packages = ["src"]